fix(theme): prevent background color bleed and add terminal padding

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -7,7 +7,7 @@
 
 html,
 body {
-  background-color: variables.$black;
+  background-color: transparent;
   height: 100%;
   margin: 0;
   overflow: hidden;
